# async-berkeley

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPER.md  README.md
.github/workflows/: build.yml  docs.yml  tests.yml
benchmarks/: CMakeLists.txt  echo_benchmark.cpp  simple_echo_benchmark.cpp
cmake/: EnableBenchmarks.cmake  EnableCoverage.cmake  EnableDocs.cmake  EnableTests.cmake  Uninstall.cmake  cmake_uninstall.cmake
docs/: .gitkeep  Doxyfile
examples/: CMakeLists.txt  async_ping_pong_client.cpp  tcp_echo.cpp
include/: io.hpp
include/io/: config.h  error.hpp  io.hpp  macros.h
include/io/detail/: concepts.hpp  customization.hpp  small_functor.hpp
include/io/execution/: executor.hpp  multiplexer.hpp  multiplexers.hpp  poll_multiplexer.hpp  triggers.hpp
include/io/execution/detail/: execution_trigger.hpp  executor.hpp  immovable.hpp  multiplexer.hpp  poll_multiplexer.hpp  utilities.hpp
include/io/execution/impl/: poll_multiplexer_impl.hpp
include/io/socket/: socket.hpp  socket_address.hpp  socket_dialog.hpp  socket_handle.hpp  socket_message.hpp  socket_option.hpp
include/io/socket/detail/: async_operations.hpp  buffer_iterator.hpp  operations.hpp  socket.hpp  sync_operations.hpp
include/io/socket/detail/impl/: buffer_iterator_impl.hpp
include/io/socket/impl/: socket_dialog_impl.hpp  socket_handle_impl.hpp  socket_message_impl.hpp
src/: CMakeLists.txt  buffers.hpp  error.hpp  io.hpp  iosched.hpp  main.cpp  operations.hpp  poll_multiplexer.cpp  poller.cpp  sockbuf.cpp  socket.hpp  socket_handle.cpp  socket_message.cpp  streams.hpp
src/buffers/: socket_buffer.cpp  socket_buffer.hpp
src/detail/: accept.hpp  bind.hpp  connect.hpp  customization.hpp  fcntl.hpp  getpeername.hpp  getsockname.hpp  getsockopt.hpp  listen.hpp  recvmsg.hpp  sendmsg.hpp  setsockopt.hpp  shutdown.hpp
src/dialog/: socket_dialog.cpp  socket_dialog.hpp
src/error/: error_handling.hpp
src/execution/: context.cpp  context.hpp  execution.hpp  executor.hpp  poll_multiplexer.cpp  poll_multiplexer.hpp
src/execution/detail/: execution_concepts.hpp  immovable.hpp  lock_exec.hpp  uncopyable.hpp
src/execution/impl/: poll_multiplexer_impl.hpp
src/io/detail/: customization.hpp
src/io/execution/: executor.hpp  multiplexers.hpp  poll_multiplexer.cpp  poll_multiplexer.hpp  triggers.cpp  triggers.hpp
src/io/execution/detail/: concepts.hpp  execution_concepts.hpp  immovable.hpp  lock_exec.hpp  multiplexer.hpp  utilities.hpp
src/io/execution/impl/: poll_multiplexer_impl.hpp
src/io/socket/: socket.hpp  socket_address.hpp  socket_dialog.hpp  socket_handle.cpp  socket_handle.hpp  socket_message.cpp  socket_message.hpp  socket_ops.hpp  socket_option.hpp
src/io/socket/detail/: operations.hpp  sync_operations.hpp  tags.hpp
src/socket/: locked_socket_ptr.hpp  posix_socket.hpp  socket.cpp  socket.hpp  socket_address.cpp  socket_address.hpp  socket_dialog.hpp  socket_handle.cpp  socket_handle.hpp  socket_message.cpp  socket_message.hpp  socket_operations.hpp  socket_ops.hpp  windows_socket.hpp
src/socket/detail/: socket_api.hpp
tests/: CMakeLists.txt  buffer_iterator_test.cpp  locked_socket_ptr_test.cpp  mock_accept_test.cpp  mock_fcntl_test.cpp  mock_poll_test.cpp  mock_recvmsg_test.cpp  mock_sendmsg_test.cpp  poll_context_test.cpp  poll_multiplexer_test.cpp  poll_triggers_test.cpp  small_functor_test.cpp  socket_address_test.cpp  socket_buffer_test.cpp  socket_dialog_test.cpp  socket_handle_test.cpp  socket_message_test.cpp  socket_option_test.cpp  socket_test.cpp
